BIGTOP-4445: Add Apache Doris to extra stack (#231)